implement compare feature
